[FIX] too big pictures

--- a/viz/theme.css
+++ b/viz/theme.css
@@ -68,3 +68,7 @@ hr {
 .sub-checkbox {
     background: ghostwhite;
 }
+
+.awesomplete {
+    width: 100%;
+}
